# scratchpad

./: README.md
battery-tool/: Makefile  akku.sh  smc.c  smc.h
puntti/: .projectile  README.md  pubspec.yaml  run.sh
puntti/android/app/: build.gradle
puntti/android/app/src/main/: AndroidManifest.xml
puntti/android/app/src/main/kotlin/com/example/puntti/: MainActivity.kt
puntti/android/app/src/profile/: AndroidManifest.xml
puntti/ios/Runner/: Info.plist
puntti/ios/Runner.xcodeproj/: project.pbxproj
puntti/lib/: constants.dart  main.dart
puntti/lib/db/: db.dart
puntti/lib/models/: exercise.dart  exercise_set.dart  workout.dart
puntti/lib/providers/: workouts.dart
puntti/lib/screens/: exercise_modal.dart  loading_screen.dart  log_screen.dart  settings_screen.dart  statistics_screen.dart  workout_screen.dart
puntti/lib/widgets/: exercise_row_item.dart  set_input.dart  set_row_item.dart  workout_row_item.dart
puntti/test/: widget_test.dart
rasp-radiator/: main.py
rasp-test/: Cargo.toml
rasp-test/src/: main.rs
vihkonen/: README.md  package-lock.json  package.json  shadow-cljs.edn
vihkonen/resources/public/: index.html  styles.css
vihkonen/src/cljs/: deps.cljs
vihkonen/src/cljs/vihkonen/: config.cljs  core.cljs  state.cljs
vihkonen/src/cljs/vihkonen/components/: input.cljs  main.cljs
