[package]
name = "rasp-test"
version = "0.1.0"
authors = ["llgtr <llgtr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
chrono = "0.4.13"
serde_json = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
